--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
   <ul>
     <li><a href="" [routerLink]="['/dashboard']">Dashboard</a></li>
     <li><a href="" [routerLink]="['/customer']">Customer</a></li>
+    <li><a href="" [routerLink]="['/admin']">Admin > Users</a></li>
+    <li><a href="" [routerLink]="['/blast']">Email > Blast</a></li>
+
   </ul>
 </nav>
 
