--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,3 @@
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
+<div>
+  <app-nav></app-nav>
 </div>
-<nav>
-  <ul>
-    <li><a href="" [routerLink]="['/dashboard']">Dashboard</a></li>
-    <li><a href="" [routerLink]="['/customer']">Customer</a></li>
-    <li><a href="" [routerLink]="['/admin']">Admin > Users</a></li>
-    <li><a href="" [routerLink]="['/blast']">Email > Blast</a></li>
-
-  </ul>
-</nav>
-
-<router-outlet></router-outlet>
